fix: convert escaped newlines before applying platform suffix to cache tags
The sed regex was failing because GitHub Actions passes multi-line input
with literal \n characters (escaped), not actual newlines. The regex
[^,[:space:]]+ was treating \n as regular characters, causing malformed
cache tags like 'build-cache-pr-71\ntype=registry-linux-arm64'.

This fix converts escaped newlines to actual newlines before applying
the platform suffix regex, ensuring correct output like:
  type=registry,ref=ghcr.io/.../build-cache-pr-71-linux-arm64
  type=registry,ref=ghcr.io/.../build-cache-linux-arm64

--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -250,6 +250,8 @@ jobs:
           # Process cache-to
           CACHE_TO="${{ inputs.cache-to }}"
           if [[ -n "$CACHE_TO" ]]; then
+            # Convert escaped newlines to actual newlines first
+            CACHE_TO=$(echo "$CACHE_TO" | sed 's/\\n/\n/g')
             # Append platform slug to any ref= value
             CACHE_TO=$(echo "$CACHE_TO" | sed -E "s/(ref=[^,[:space:]]+)/\1-${PLATFORM_SLUG}/g")
           fi
@@ -257,6 +259,8 @@ jobs:
           # Process cache-from
           CACHE_FROM="${{ inputs.cache-from }}"
            if [[ -n "$CACHE_FROM" ]]; then
+            # Convert escaped newlines to actual newlines first
+            CACHE_FROM=$(echo "$CACHE_FROM" | sed 's/\\n/\n/g')
             # Append platform slug to any ref= value
             CACHE_FROM=$(echo "$CACHE_FROM" | sed -E "s/(ref=[^,[:space:]]+)/\1-${PLATFORM_SLUG}/g")
           fi
