fix: add semantic versioning tags for release events
Docker metadata-action was missing semver tag patterns, causing release
events to generate no tags. This resulted in 'ERROR: can't push with no
tags specified' when the merge job attempted to create manifest lists.

Added three semver patterns:
- type=semver,pattern={{version}} - generates full version (e.g., 1.0.0-rc0)
- type=semver,pattern={{major}}.{{minor}} - generates major.minor (e.g., 1.0)
- type=semver,pattern={{major}} - generates major version (e.g., 1)

These patterns are automatically applied when the workflow is triggered
by a release/tag event, ensuring Docker images are properly tagged with
version numbers.

Fixes: Release workflows failing with no tags generated

--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -180,6 +180,11 @@ jobs:
           echo "type=ref,event=branch" >> $GITHUB_ENV
           echo "type=ref,event=pr" >> $GITHUB_ENV
           
+          # Semantic versioning tags for release events
+          echo "type=semver,pattern={{version}}" >> $GITHUB_ENV
+          echo "type=semver,pattern={{major}}.{{minor}}" >> $GITHUB_ENV
+          echo "type=semver,pattern={{major}}" >> $GITHUB_ENV
+          
           # Check if tags input is provided
           if [ -n "${{ inputs.tags }}" ]; then
             # Process input line by line
