feat: add conditional to merge job to prevent running when both platforms disabled

--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -323,6 +323,7 @@ jobs:
 
   merge:
     runs-on: ${{ inputs.runner-amd64 }}
+    if: ${{ inputs.build-amd64 || inputs.build-arm64 }}
     outputs: 
       image_tag: ${{ steps.output-image-tag.outputs.image_tag }}
     needs:
