--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -109,7 +109,7 @@ on:
 
 jobs:
   setup-matrix:
-    runs-on: ubuntu-latest
+    runs-on: ${{ inputs.runner-amd64 || 'ubuntu-latest' }}
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
