fix: add fallback runner for merge job
- merge job now falls back to ubuntu-latest if runner-amd64 is not specified
- Ensures consistency across all jobs (setup-matrix, build, merge)

--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -341,7 +341,7 @@ jobs:
           retention-days: 1
 
   merge:
-    runs-on: ${{ inputs.runner-amd64 }}
+    runs-on: ${{ inputs.runner-amd64 || 'ubuntu-latest' }}
     if: ${{ inputs.build-amd64 || inputs.build-arm64 }}
     outputs: 
       image_tag: ${{ steps.output-image-tag.outputs.image_tag }}
